--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ before_install:
     - echo "deb http://llvm.org/apt/trusty/ llvm-toolchain-trusty-3.8 main" | sudo tee -a /etc/apt/sources.list
     - sudo apt-get update -qq
     - sudo apt-get install -y clang-3.8
+install:
     - pip install -r requirements.txt
+    - python setup.py install
 script:
     - coverage run setup.py test
     - coverage report --show-missing
