--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_install:
     - echo "deb http://llvm.org/apt/trusty/ llvm-toolchain-trusty-3.8 main" | sudo tee -a /etc/apt/sources.list
     - sudo apt-get update -qq
     - sudo apt-get install -y clang-3.8
+    - which clang-3.8
+    - which clang
 install:
     - pip install -r requirements.txt
     - python setup.py install
